--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,11 +68,13 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  generate: true
+
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/article/
     - assets/icons/
-  
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
